--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ button{
 .weather-temperature{
     font-size: 80px;
     margin-top: 10px;
+    margin-left: 30px;
     width: 35%;
  }
 
@@ -187,5 +188,11 @@ margin-right: 10px;
 }
 
  /* //////////////////////// */
+ @media(max-width:560px){
+    .wrapper {
+        width: 440px;
+ }
+}
+
 
  
