--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
  .wrapper {
      margin: 10px auto;
      padding: 5px;
-     width: 550px;
+     max-width: 550px;
+     min-width: 400px;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -188,10 +189,5 @@ margin-right: 10px;
 
  /* //////////////////////// */
 
- @media(max-width:560px){
-    .wrapper {
-        width: 440px;
- }
-}
 
  
