--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ button{
      justify-content: space-between;
      width: 65%;
      margin-top: 10px;
+     margin-left: 70px;
  }
 
 .weather-main,
